# rust-okx

./: .env.example  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REQUEST_AUDIT.md  TODO.md  cliff.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  okx-docs-snapshot.yml  release.yml
examples/: dca_bot.rs  funding.rs  login.rs  trade_live.rs  ws_business.rs  ws_private.rs  ws_public.rs
scripts/: check_contributing.py
src/: client.rs  credentials.rs  error.rs  lib.rs  signing.rs  test_util.rs
src/api/: account.rs  funding.rs  market.rs  mod.rs  public_data.rs  trade.rs
src/api/account/: api.rs  endpoints.rs  internal.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/account/requests/: account_mode.rs  balances.rs  borrowing.rs  demo.rs  history.rs  loans.rs  mmp.rs  position_management.rs  positions.rs  risk.rs  settings.rs  trading.rs
src/api/account/responses/: account_mode.rs  balances.rs  bills.rs  borrowing.rs  config.rs  demo.rs  loans.rs  mmp.rs  position_management.rs  positions.rs  risk.rs
src/api/account/tests/: account_mode.rs  balance.rs  bills.rs  borrowing.rs  demo.rs  mmp.rs  mod.rs  position_management.rs  risk.rs  trading.rs
src/api/convert/: api.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/fiat/: api.rs  endpoints.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/finance/: api.rs  endpoints.rs  internal.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/finance/requests/: common.rs  dual_investment.rs  flexible_loan.rs  okusd.rs  savings.rs  stable_rewards.rs  staking.rs
src/api/finance/responses/: dual_investment.rs  flexible_loan.rs  okusd.rs  savings.rs  stable_rewards.rs  staking.rs
src/api/finance/tests/: dual_investment.rs  eth_staking.rs  flexible_loan.rs  mod.rs  okusd.rs  savings.rs  sol_staking.rs  stable_rewards.rs  staking_defi.rs
src/api/funding/: api.rs  endpoints.rs  internal.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/funding/tests/: assets.rs  deposits.rs  edge.rs  mod.rs  transfers.rs  withdrawals.rs
src/api/market/: api.rs  endpoints.rs  internal.rs  market.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/public_data/: api.rs  endpoints.rs  internal.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/public_data/requests/: edge.rs
src/api/public_data/responses/: edge.rs
src/api/rfq/: api.rs  endpoints.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/spread/: api.rs  endpoints.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/status/: api.rs  endpoints.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/sub_account/: api.rs  endpoints.rs  mod.rs  requests.rs  responses.rs
src/api/sub_account/tests/: balances.rs  management.rs  mod.rs
src/api/support/: api.rs  endpoints.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/trade/: api.rs  endpoints.rs  internal.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/trade/requests/: advanced.rs  algo.rs  risk_controls.rs
src/api/trade/responses/: advanced.rs  algo.rs  (+1 more)
src/api/trading_bot/: api.rs  endpoints.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/api/trading_data/: api.rs  endpoints.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/model/: mod.rs
src/model/validation/: mod.rs  tests.rs
src/transport/: mod.rs  reqwest_impl.rs
src/ws/: arg.rs  channels.rs  client.rs  conn.rs  error.rs  event.rs  mod.rs  model.rs  ops.rs  request.rs  response.rs  tests.rs
src/ws/channels/: account.rs  algo.rs  block.rs  funding.rs  grid.rs  market.rs  mod.rs  public_data.rs  spread.rs  status.rs  trade.rs
src/ws/model/: account.rs  algo.rs  block.rs  compile_checks.rs  funding.rs  grid.rs  market.rs  mod.rs  public_data.rs  spread.rs  status.rs  trade.rs
src/ws/ops/: mod.rs  raw.rs  spread.rs  trade.rs
src/ws/request/: envelope.rs  mod.rs  spread.rs  trade.rs
src/ws/response/: acknowledgement.rs  mod.rs  operation.rs  push.rs  spread.rs  trade.rs
tests/: README.md  account.rs  account_loan.rs  api_coverage.rs  convert.rs  fiat.rs  finance.rs  funding.rs  lifecycle_demo.rs  market.rs  market_public.rs  model_completeness.rs  public_data.rs  public_market_edge.rs  sub_account.rs  trade.rs  trade_advanced.rs  trading_data.rs  ws.rs  ws_account.rs  ws_positions.rs  ws_private.rs  ws_public.rs
tests/account/: loans.rs  read_only.rs  todo.rs
tests/common/: mod.rs
tests/convert/: read_only.rs  todo.rs
tests/finance/: read_only.rs  todo.rs
tests/funding/: read_only.rs  todo.rs
tests/market/: core.rs  derivatives.rs  todo.rs
tests/public_data/: core.rs  history.rs  options_and_quotas.rs  todo.rs
tests/rfq/: todo.rs
tests/spread/: todo.rs
tests/sub_account/: read_only.rs  todo.rs
tests/trade/: read_only.rs  todo.rs
tests/trading_bot/: grid_todo.rs
tests/ws/: account.rs  balance_and_position.rs  block.rs  common.rs  funding.rs  positions.rs
(+6 files in other folders)
