[package]
name = "rust-okx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Async Rust client for the OKX v5 REST API"
license = "MIT OR Apache-2.0"

[dependencies]
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
time = "0.3"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
rust_decimal = { version = "1", optional = true }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
rust-decimal = ["dep:rust_decimal"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
http = "1"
bytes = "1"
dotenvy = "0.15"
