[package]
name = "rust-okx"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Async Rust client for the OKX v5 REST API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fwqaaq/rust-okx"
homepage = "https://github.com/fwqaaq/rust-okx"
documentation = "https://docs.rs/rust-okx"
readme = "README.md"
keywords = ["okx", "crypto", "trading", "rest", "async"]
categories = ["api-bindings", "asynchronous", "finance"]

[dependencies]
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"
time = "0.3.49"
thiserror = "2"
reqwest = { version = "0.13.4", default-features = false, features = [
  "rustls",
  "system-proxy",
], optional = true }
rust_decimal = { version = "1", optional = true }
tokio-tungstenite = { version = "0.24", default-features = false, features = [
  "connect",
  "rustls-tls-webpki-roots",
], optional = true }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
], optional = true }
tokio = { version = "1", features = ["time", "rt", "net"], optional = true }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
rust-decimal = ["dep:rust_decimal"]
websocket = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tokio"]

[dev-dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "time",
] }
http = "1"
bytes = "1"
dotenvy = "0.15"

[[example]]
name = "ws_public"
required-features = ["websocket"]

[[example]]
name = "ws_private"
required-features = ["websocket"]

[[example]]
name = "ws_business"
required-features = ["websocket"]
